--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "@types/webextension-polyfill": "^0.12.1",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.14",
@@ -29,7 +30,8 @@
     "prettier": "3.3.3",
     "prettier-plugin-css-order": "^2.1.2",
     "typescript": "^5.6.3",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "webextension-polyfill": "^0.10.0"
   },
   "lint-staged": {
     "*.{js?(x),ts?(x)}": [
